added support for sha3 calculation via rest api
